[gd_scene load_steps=18 format=3 uid="uid://px47tge8r383"]

[ext_resource type="Script" path="res://scenes/enemies/ghost.gd" id="1_10d6v"]
[ext_resource type="Texture2D" uid="uid://d0obrsj8fjkdt" path="res://sprites/enemies/shadow.png" id="2_w7bj5"]
[ext_resource type="Texture2D" uid="uid://b6bt7t7lnf7c3" path="res://sprites/enemies/ghost/ghost_defend.png" id="3_1luki"]
[ext_resource type="Texture2D" uid="uid://csstc7rc3rhas" path="res://sprites/enemies/ghost/ghost1.png" id="3_7klk1"]
[ext_resource type="Texture2D" uid="uid://1gcoe1mqb87o" path="res://sprites/enemies/ghost/ghost.png" id="4_5ojie"]
[ext_resource type="Script" path="res://scenes/enemies/debuff_container.gd" id="8_33m5h"]
[ext_resource type="Texture2D" uid="uid://ld2mbbhq1t46" path="res://sprites/test_player/health_red.png" id="9_emo6b"]
[ext_resource type="Texture2D" uid="uid://d35cv6mcrm6kc" path="res://sprites/test_player/health_green.png" id="10_c0g14"]
[ext_resource type="Script" path="res://systems/damage_batcher.gd" id="11_g43ji"]

[sub_resource type="SpriteFrames" id="SpriteFrames_optk0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_1luki")
}],
"loop": true,
"name": &"hide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_7klk1")
}, {
"duration": 1.0,
"texture": ExtResource("4_5ojie")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tjubl"]
size = Vector2(67.75, 74)

[sub_resource type="Animation" id="Animation_q0fod"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(21, 11)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, -111)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0xnkx"]
resource_name = "attack"
length = 1.0667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.733333, 0.866667, 1.06667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(21, 11), Vector2(23, 9), Vector2(31, -1), Vector2(21, 11)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.733333, 0.866667, 1.06667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.331878, -0.327537, 0.0]
}

[sub_resource type="Animation" id="Animation_fm6ug"]
resource_name = "die"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(21, 11), Vector2(12, 15)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.346826]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(8, -111), Vector2(1, -93), Vector2(-4, -51)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.339944, -1.02021]
}

[sub_resource type="Animation" id="Animation_ysu75"]
resource_name = "hide"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.366667, 1.83333, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.686275), Color(1, 1, 1, 0.227451), Color(1, 1, 1, 0.227451), Color(1, 1, 1, 0.686275)]
}

[sub_resource type="Animation" id="Animation_y6b1v"]
resource_name = "move"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(21, 11)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rw0yy"]
_data = {
"RESET": SubResource("Animation_q0fod"),
"attack": SubResource("Animation_0xnkx"),
"die": SubResource("Animation_fm6ug"),
"hide": SubResource("Animation_ysu75"),
"move": SubResource("Animation_y6b1v")
}

[node name="ghost" type="Node2D" groups=["enemy"]]
texture_filter = 1
script = ExtResource("1_10d6v")
max_health = 80.0

[node name="container" type="Node2D" parent="."]

[node name="crosshair" type="Marker2D" parent="container"]
position = Vector2(-25, -103)

[node name="shadow" type="Sprite2D" parent="container"]
modulate = Color(1, 1, 1, 0)
z_index = -1
position = Vector2(9, 6)
scale = Vector2(0.0792833, 0.132945)
texture = ExtResource("2_w7bj5")

[node name="sprite" type="Node2D" parent="container"]
position = Vector2(8, -111)
scale = Vector2(0.5, 0.5)

[node name="body" type="AnimatedSprite2D" parent="container/sprite"]
modulate = Color(1, 1, 1, 0.666667)
position = Vector2(21, 11)
sprite_frames = SubResource("SpriteFrames_optk0")
animation = &"hide"
autoplay = "hide"

[node name="pivot" type="Marker2D" parent="container/sprite/body"]
position = Vector2(-13, 19)

[node name="Area2D" type="Area2D" parent="container"]
visible = false
position = Vector2(5, -114)
scale = Vector2(1, 1.44)

[node name="CollisionShape2D" type="CollisionShape2D" parent="container/Area2D"]
position = Vector2(12, 47)
shape = SubResource("RectangleShape2D_tjubl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="container"]
root_node = NodePath("../sprite")
libraries = {
"": SubResource("AnimationLibrary_rw0yy")
}
autoplay = "hide"

[node name="debuff_container" type="HBoxContainer" parent="."]
offset_left = 49.0
offset_top = -151.0
offset_right = 89.0
offset_bottom = -111.0
script = ExtResource("8_33m5h")

[node name="ProgressBar" type="TextureProgressBar" parent="."]
texture_filter = 1
offset_left = -24.0
offset_top = -152.0
offset_right = 136.0
offset_bottom = -120.0
scale = Vector2(0.437226, 0.402117)
texture_under = ExtResource("9_emo6b")
texture_progress = ExtResource("10_c0g14")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(-58, -65)

[node name="batcher" type="Node" parent="Node2D"]
script = ExtResource("11_g43ji")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="area_entered" from="container/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="container/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="animation_finished" from="container/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
